Fixed some layout issues.

--- a/style.css
+++ b/style.css
@@ -9,14 +9,46 @@
 }
 
 body {
-	font-family: "open sans";
+	font-family: "Source Sans Pro";
 	height: 100%;
 	color: #000;
 	width: 100%;
 }
 
+h1 {
+	font-size: 3em;
+	letter-spacing: .25em;
+	padding-bottom: 2em;
+	padding-top: 1em;
+	color: #FFF;
+	text-transform: uppercase;
+}
+
+h2 {
+	color: #FFF;
+	letter-spacing: .25em;
+	line-height: 2em;
+	top: 25%;
+	transform: translateY(25%);
+}
+
+h3 {
+	letter-spacing: .25em;
+	line-height: 2em;
+	padding-top: 1em;
+	top: 25%;
+	transform: translateY(25%);
+}
+
+h3 a {
+	color: #FFF;
+	text-decoration: none;
+	padding: 1em 2em;
+	background-color: #f15a22;
+	border-radius: 25px;
+}
+
 header {
-	padding: 2em 1em;
 	background-color: #ecf0f1;
 	height: 95vh;
 	background-attachment: fixed;
@@ -27,15 +59,12 @@ header {
 
 header h1 {
 	font-size: 3em;
-	padding-bottom: 1em;
 	color: #FFF;
-	padding-left: 2em;
+	padding-top: 1em;
 }
 
 header h2, header h3 {
 	color: #FFF;
-	max-width: 40em;
-	padding-left: 8em;
 	line-height: 2em;
 }
 
@@ -46,14 +75,14 @@ header h1, header h2, header h3 {
 }
 
 header h3 {
-	padding-top: 2.5em;
+	padding-top: 2em;
 }
 
 header h3 a {
 	color: #FFF;
 	text-decoration: none;
-	padding: .8em 1em;
-	background-color: #F02E61;
+	padding: 1em 2em;
+	background-color: #f15a22;
 	border-radius: 25px;
 }
 
@@ -63,11 +92,11 @@ header h3 a:hover {
 }
 
 header h4 {
-	padding-top: .25em;
+	padding-left: .75em;
 }
 
 header ul {
-	padding-bottom: 2em;
+	padding-right: .75em;
 	float: right;
 	margin-top: -1em;
 }
@@ -90,15 +119,6 @@ header ul li a:hover {
 	height: 25em;
 	background-color: #F02E61;
 	padding: 3em;
-}
-
-.left-container {
-	vertical-align: middle;
-	display: inline;
-	float: left;
-	height: 95vh;
-	width: 33%;
-	background-color: Blue;
 }
 
 .dropdown {
@@ -144,21 +164,29 @@ header ul li a:hover {
 	max-width: 70em;
 }
 
+.left-container {
+	display: inline;
+	float: left;
+	height: 95vh;
+	width: 33%;
+	background-color: #bdc3c7;
+}
+
 .mid-container {
-	vertical-align: middle;
+	background-color: #7f8c8d;
 	display: inline;
 	float: left;
 	height: 95vh;
 	width: 34%;
-	background-color: Blue;
+	text-align: center;
 }
 
 .navbar {
 	background-color: #95a5a6;
 	font-size: 1.25em;
-	height: 30px;
+	height: 25px;
 	list-style-type: none;
-	padding: 30px;
+	padding: 15px;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -177,10 +205,17 @@ header ul li a:hover {
 }
 
 .right-container {
-	vertical-align: middle;
 	display: inline;
 	float: right;
 	height: 95vh;
 	width: 33%;
-	background-color: Blue;
+	background-color: #bdc3c7;
+}
+
+.art {
+
+}
+
+.design {
+
 }
